fix: alignment of initial loader

--- a/src/components/ui/loader.module.css
+++ b/src/components/ui/loader.module.css
@@ -12,12 +12,13 @@
 .loader-inner {
   position: absolute;
   top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
+  transform: translateY(-50%);
+  width: 100%;
 }
 
 .loader-inner > * + * {
   margin-top: 1rem;
+  text-align: center;
 }
 
 .loader p {
